--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -15,6 +15,7 @@
     --dark-bg: hsl(230, 17%, 14%);
     --dark-top-bg: hsl(232, 19%, 15%);
     --dark-card: hsl(228, 28%, 20%);
+    --dark-card-hover: hsl(228, 25%, 27%);
     --dark-text1: hsl(228, 34%, 66%);
     --dark-text2: hsl(0, 0%, 100%);
     --light-bg: hsl(0, 0%, 100%);
@@ -22,6 +23,8 @@
     --light-card: hslhsl(227, 47%, 96%);
     --light-text1: hsl(228, 12%, 44%);
     --light-text2: hsl(230, 17%, 14%);
+
+
 
 
 
