--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -7,7 +7,6 @@
   display: grid;
   grid-template-columns: 1fr 3rem;
   border: none;
-  gap: rem(4.8) rem(12);
   margin: 0;
  
 
@@ -15,19 +14,19 @@
     font-size: rem(14);
     font-weight: 700;
     color: var(--toggle);
-    grid-column: 1 / 2;
 
-    &[for="dark"]{
+    &[for="dark"] {
      
     line-height: rem(24);
     margin-right: rem(13);
+    
 
      
   }
+}
 
   &__wrapper {
     height: rem(24);
-    grid-column: 2 / 3;
     position: relative;
     
   }
@@ -37,15 +36,14 @@
     opacity: 0;
     width: rem(24);
     height: rem(24);
-    margin: 0;
-
+  
     &:focus ~ .toggle__button {
       border: 2px solid white;
     }
   }
 
   &__background {
-    background: linear-gradient(225deg, var(--toggle-bg-end)0%, var(--toggle-bg-start)98.02%);
+    background: var(--toggle-bg);
     display: block;
     height: 100%;
     border-radius: rem(12);
@@ -66,7 +64,7 @@
     width: rem(18);
     height: rem(18);
     border-radius: 50%;
-    background-color: var(--dark-bg);
+    background-color: var(--toggle-button);
     transition: all 150ms ease-in-out;
 
     ~ #dark:light {
