--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -21,3 +21,11 @@ h2 {
     font-size: rem(24);
     margin-bottom: rem(24);
 }
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+  }
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+  }
