We're Done Here
We're Done Here

--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -148,6 +148,7 @@
     &__username {
         font-size: re(12);
         font-weight: bold;
+        color: var(--text-color);
 
     }
     &__count {
